--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -8,8 +8,7 @@ jobs:
       - uses: actions/setup-node@v3
 
       - name: setup project
-        run: make setup
-        run: make start
+        run: make setup make start
 
       - name: running tests
         run: make test
