--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-
-      - name: setup project
-        run: make setup make start
+      
+      - run: make setup 
+      - run: make start
 
       - name: running tests
         run: make test
